2009-08-26  Darren Kenny  <darren.kenny@sun.com>

	* configure.in:
	  We shouldn't be adding location of private libs to the runpath.
	  This fixes defect#10952.
	* common/nwamui_env.c: 
	  Fix defect#10843 where renaming of the location wasn't working if
	  the new name was just a longer version of the old name (e.g Home and
	  then HomeNew).
	* common/nwamui_daemon.c: 
	  Fix similar issues found here.

2009-08-26  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_daemon.c: 
	  Fix defect#10720 where an extra bssid was being appended to the list
	  of bssids. This was the result of the fact that the only valid
	  member of the wifi_info during a NEED_KEY event is the essid, all
	  other values are random and we are using them.

2009-08-26  Lin Ma  <Lin.Ma@Sun.COM>

	* daemon/nwam-wifi-item.c (wifi_net_notify):
	* daemon/status_icon.c (nwam_menu_scan_started),
	(nwam_menu_create_wifi_menuitems), (connect_nwam_object_signals),
	(status_icon_popup), (nwam_menu_stop_update_wifi_timer):
	Fixed clicking 'join unlisted wireless network' cleans wlan menu-items.
	Connect wifi_scan_result signal on nwam_menu_scan_started, and
	disconnect that signal on the last wifi_scan_result signal.

2009-08-25  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_env_pref_dialog.c: 
	  Fix several issues found with the location preferences, specifically
	  w.r.t. incorrect setting of config_file props, causing validation
	  errors, as well as the incorrect behaviour of some NS toggles.
	* capplet/nwam_location_dialog.c:
	  Fix small memory leak.
	* common/nwamui_env.c: 
	  Fix nwamui_env_set_*_config_file() variations to allow NULL value,
	  which removes the associated property.

2009-08-24  Darren Kenny  <darren.kenny@sun.com>

	* common/libnwamui.c, common/libnwamui.h:
	  Add function nwamui_util_confirm_removal() to meet UI spec where
	  it's a Cancel/Remove button set rather than No/Yes. This fixes
	  defect#10842.